fixed a problem with recipe thumbnails jumping around when resizing screen.

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -21,6 +21,8 @@ a {
 
 body {
   font-size: 16px;
+  font-family: 'Lato', sans-serif;
+  color: #222;
 }
 
 .make-wide {
