--- a/src/components/NewRecipe/NewRecipe.css
+++ b/src/components/NewRecipe/NewRecipe.css
@@ -53,7 +53,7 @@ textarea {
 }
 
 .white-bg-form {
-  background-color: white;
+  background-color: #eee;
   padding: 5px 20px 35px 20px;
   margin-bottom: 25px;
 }
